# app-migrator-openspec-claude

./: README.md  app.yaml  pyproject.toml
docs/: doc1.md  doc2.md  doc3.md  doc4.md  doc5.md
openspec/: project.md
openspec/changes/add-argocd-migrator/: tasks.md
openspec/changes/add-argocd-migrator/specs/argocd-migration-pipeline/: spec.md
openspec/changes/archive/2026-01-21-add-argocd-migrator/: design.md  proposal.md
openspec/changes/update-aggregated-config-output/: design.md  proposal.md  tasks.md
openspec/changes/update-aggregated-config-output/specs/argocd-migration-pipeline/: spec.md
openspec/specs/argocd-migration-pipeline/: spec.md
src/argocd_migrator/: __init__.py  __main__.py  aggregator.py  cli.py  exceptions.py  migrator.py  parser.py  pipeline.py  scanner.py  transformer.py  validator.py
src/argocd_migrator/schemas/: application-v1alpha1.json  generator-config.json
tests/fixtures/argocd-apps/: invalid-kind.yaml  sample-app.yaml
tests/integration/: test_aggregated_pipeline.py  test_pipeline.py  test_pipeline.py.old
tests/unit/: test_aggregator.py  test_migrator.py  test_parser.py  test_scanner.py  test_transformer.py  test_validator.py
